syntax = "proto3";

package calculator.v1;

service CalculatorPlugin {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Sub(SubRequest) returns (SubResponse);
  rpc Mul(MulRequest) returns (MulResponse);
  rpc Div(DivRequest) returns (DivResponse);
}

message AddRequest {
  int64 a = 1;
  int64 b = 2;
}
message AddResponse {
  int64 c = 1;
}

message SubRequest {
  int64 a = 1;
  int64 b = 2;
}
message SubResponse {
  int64 c = 1;
}

message MulRequest {
  int64 a = 1;
  int64 b = 2;
}
message MulResponse {
  int64 c = 1;
}

message DivRequest {
  int64 a = 1;
  int64 b = 2;
}
message DivResponse {
  int64 c = 1;
}